Update style.css - fix line and item spacing

--- a/style.css
+++ b/style.css
@@ -136,3 +136,15 @@ h2 {
   color: var(--navy) !important;
   font-family: var(--heading-font);
 }
+
+p, li {
+  line-height: 1.2;
+}
+
+p {
+  margin-bottom: 1.2rem;
+}
+
+li {
+  margin-bottom: 0.8rem;
+}
